# learn-microservices

./: pyproject.toml  run_redis.sh
microservices/inventory/: consumer.py  main.py
microservices/payment/: consumer.py  main.py
tests/: test_microservices.py
